<resources>
    <string name="app_name">GiftWise</string>

    <!-- Welcome page headers -->
    <string name="welcome_header_0">Contacts</string>
    <string name="welcome_header_1">Gift ideas</string>
    <string name="welcome_header_2">Profile</string>

    <!-- Welcome page text content -->
    <string name="welcome_content_0">Select and add family and friends from your contact list</string>
    <string name="welcome_content_1">Share links from your browser and other apps to add gifts</string>
    <string name="welcome_content_2">Note preferences for sizes, brands, and colors</string>

    <string name="action_addcontact">Add contact</string>
    <string name="action_createcontact">New contact</string>

    <!-- content authority -->
    <string name="content_authority">com.honu.giftwise</string>

    <!-- account information -->
    <!--<string name="account_name">bdiegel@gmail.com</string>-->
    <!--<string name="account_type">com.honu.giftwise</string>-->
    <string name="account_name">GiftWise</string>
    <string name="account_type">giftwise.honu.com</string>

    <string name="title_activity_contact">Contact</string>

    <string-array name="contact_tabs">
        <item>GIFT IDEAS</item>
        <item>PROFILE</item>
    </string-array>
    <string name="title_activity_create_contact">Create contact</string>
    <string name="title_activity_edit_gift">GiftWise</string>
    <string name="gift_name">Name</string>
    <string name="action_share">Share</string>
    <string name="action_browse">Open URL</string>

    <string name="color_picker_liked_title">Select colors liked: </string>
    <string name="color_picker_disliked_title">Select colors disliked: </string>

    <string-array name="size_choices">
        <item>XXSmall</item>
        <item>XSmall</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XLarge</item>
        <item>2XLarge</item>
    </string-array>

    <string-array name="clothing_choices">
        <item>Shirt</item>
        <item>Pant</item>
        <item>Dress</item>
        <item>Jeans</item>
        <item>Shoes</item>
        <item>Shorts</item>
        <item>Skirt</item>
        <item>Sweater</item>
        <item>Suit</item>
        <item>Blouse</item>
        <item>Top</item>
        <item>Jacket</item>
        <item>Swim</item>
        <item>Coat</item>
    </string-array>

    <string-array name="size_context_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string name="title_activity_view_gift">ViewGiftActivity</string>
    <string name="title_activity_edit_size">EditSizeActivity</string>
    <string name="action_edit_contact">Edit Contact</string>
    <string name="about">Info</string>
    <string name="profile_events_label">EVENTS</string>
    <string name="contact_birthday_text">Birthday:</string>
    <string name="contact_anniversary">Anniversary:</string>
    <string name="profile_colors_label">COLORS</string>
    <string name="profile_sizes_label">SIZES</string>
    <string name="profile_addsize_button_label">Add Size</string>
    <string name="contact_display_name_hint">Name</string>
    <string name="gift_recipient_label">Recipient</string>
    <string name="gift_details_label">Gift</string>
    <string name="gift_price_label">Price</string>
    <string name="gift_url_label">URL</string>
    <string name="gift_notes_label">Notes</string>
    <string name="gift_item_label">Item</string>
    <string name="item_spinner_hint">Shirt</string>
    <string name="size_textview_label">Size</string>
    <string name="size_spinner_hint">Medium</string>
    <string name="notes_textview_label">Notes</string>
    <string name="contact_display_name_label">Recipient</string>
    <string name="gift_price_label2">Price</string>
    <string name="fragment_view_gift_url_label">URL</string>
    <string name="fragment_view_gift_notes_label">Notes</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Feedback -->
    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">support@honuapps.com</string>
    <string name="mail_feedback_subject">Feedback on GiftWise</string>
    <string name="mail_feedback_message">Thank you!</string>

    <!-- License -->
    <string name="bsd3_license">
        <![CDATA[<html>
        <p>
        Copyright (c) 2014, Honu Apps
        <br></br>
        All rights reserved.
        </p>
        <p>
        Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
        <br></br>
        <br></br>1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
        <br></br>2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
        <br></br>3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
        </p>
        <p>
        THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
        </p>
        </html>]]>
    </string>
</resources>
