<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.honu.giftwise.EditSizeFragment">

    <LinearLayout
        android:id="@+id/size_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_textview"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/gift_item_label"
            android:textAppearance="?android:textAppearanceLarge"
            >
        </TextView>

        <AutoCompleteTextView
            android:id="@+id/item_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/item_spinner_hint"
            android:inputType="text|textCapWords"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <TextView
            android:id="@+id/size_textview"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/size_textview_label"
            android:textAppearance="?android:textAppearanceLarge"
            >
        </TextView>

        <AutoCompleteTextView
            android:id="@+id/size_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/size_spinner_hint"
            android:inputType="text|textCapWords"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <TextView
            android:id="@+id/notes_textview"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/notes_textview_label"
            android:textAppearance="?android:textAppearanceLarge"
            >
        </TextView>

        <EditText
            android:id="@+id/size_notes"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint=""
            android:imeOptions="actionDone"
            android:inputType="text|textLongMessage|textCapSentences"/>

    </LinearLayout>

</RelativeLayout>
