<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
        >
        <!--tools:context="com.honu.giftwise.CreateContactActivity$PlaceholderFragment">-->

        <TextView
            android:id="@+id/gift_recipient_section"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="8dp"
            android:text="@string/gift_recipient_label"
            android:textAppearance="?android:textAppearanceLarge"/>

        <Spinner
            android:id="@+id/contacts_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>


        <!--<TextView-->
        <!--android:id="@+id/gift_details_section"-->
        <!--style="?android:attr/listSeparatorTextViewStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="16dp"-->
        <!--android:text="@string/gift_details_label"/>-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/gift_name_and_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/image_frame"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_gift_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    >

                    <EditText
                        android:id="@+id/gift_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gift_name"
                        android:imeOptions="actionNext"
                        android:inputType="text|textCapWords"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_gift_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    >

                    <EditText
                        android:id="@+id/gift_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gift_price_label"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/image_frame"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                >

                <ImageView
                    android:id="@+id/gift_image"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:background="@drawable/image_border"
                    android:src="@drawable/gift_silhouette_48dp"/>

            </FrameLayout>


        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_gift_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/gift_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gift_url_label"
                android:imeOptions="actionNext"
                android:inputType="text|textUri"/>

        </android.support.design.widget.TextInputLayout>

        <!--<TextView-->
        <!--android:id="@+id/gift_notes_section"-->
        <!--style="?android:attr/listSeparatorTextViewStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="16dp"-->
        <!--android:text="@string/gift_notes_label"/>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_gift_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/gift_notes"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/gift_notes_label"
                android:imeOptions="actionDone"
                android:inputType="text|textLongMessage|textCapSentences"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</ScrollView>